--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord.js-ticketsystem",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "A easy discord.js ticket bot system",
   "main": "test.js",
   "scripts": {
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/LouiLetsPlayPro/discord.js-ticketsystem#readme",
   "dependencies": {
-    "discord-html-transcripts": "^3.1.0",
-    "discord.js": "^14.6.0",
+    "discord-html-transcripts": "^3.1.4",
+    "discord.js": "^14.9.0",
     "discord.js-console": "^2.1.0-constructor",
     "enmap": "^5.9.0"
   },
