--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord.js-ticketsystem",
   "version": "1.0.1-alpha.0",
   "description": "A easy discord.js ticket bot system",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
     "test": "node .",
     "bot": "node test.js"
@@ -28,7 +28,7 @@
   "dependencies": {
     "discord-html-transcripts": "^3.1.4",
     "discord.js": "^14.9.0",
-    "discord.js-console": "^2.1.0-constructor",
+    "discord.js-console": "2.1.0-constructor",
     "enmap": "^5.9.0"
   },
   "types": "./src/types.ts",
